--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <style>
             @media (max-width:700px){
                  .align{
-                    max-width:380px ;
+                    max-width:400px ;
                     max-height: 667px;
                  }
             }
@@ -21,7 +21,8 @@
 
             .align{
                 display: flex;
-                height: 180vh;
+                text-align: center;
+                height: 300vh;
             }
         </style>
         <h1 style="text-align: center;">Pedra, papel ou tesoura!</h1>
